# PatriconFi

./: .gitignore  README.md
.github/workflows/: agents.yml  ci-agents.yml  ci-contracts.yml  ci-web.yml  contracts.yml  web.yml
agents/: pyproject.toml
agents/patriconfi_agents/: __init__.py  agent_runtime.py  aisa_client.py  arc_client.py  config.py  gateway_client.py  x402_client.py
agents/tests/: test_agent_flows.py  test_gateway_client.py  test_x402_client.py
contracts/: pyproject.toml
contracts/scripts/: contract_tasks.py  deploy_activity_ledger.py  deploy_agent_registry.py  deploy_vault.py
contracts/src/: ActivityLedger.vy  AgentRegistry.vy  AgentVault.vy
contracts/src/interfaces/: IERC20_USDC.vy  IERC8004.vy
contracts/tests/: test_activity_ledger.py  test_agent_registry.py  test_agent_vault.py
contracts/tests/mocks/: MockIdentityRegistry.vy  MockUSDC.vy
docs/: arc-setup.md  architecture.md  nanopayments-flow.md  security-principles.md
infra/: README.md
web/: package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
web/app/: layout.tsx  page.tsx
web/app/agents/: page.tsx
web/app/api/demo-run/: route.ts
web/app/dashboard/: page.tsx
web/components/: AgentTable.tsx  AppProviders.tsx  TxFeed.tsx  WalletConnector.tsx
web/lib/: arcClient.ts  contracts.ts  wallet.ts  x402Client.ts
web/tests/e2e/: demo-flow.spec.ts
