[project]
name = "patriconfi-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
circle = [
  "circle-titanoboa-sdk>=0.1.0",
]

[project.scripts]
patriconfi-agent-runtime = "patriconfi_agents.agent_runtime:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
