[project]
name = "patriconfi-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "poethepoet>=0.30.0",
]
circle = [
  "circle-titanoboa-sdk>=0.1.0",
]

[project.scripts]
patriconfi-agent-runtime = "patriconfi_agents.agent_runtime:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
files = ["patriconfi_agents", "tests"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.poe.tasks]
build = "python -m compileall -q patriconfi_agents"
test = "pytest -q"
e2e = "pytest -q tests/test_agent_flows.py"

[tool.poe.tasks.bootstrap]
shell = "python -m pip install --upgrade pip && python -m pip install -e .[dev]"

[tool.poe.tasks.lint]
shell = "python3 -m ruff check . && python3 -m mypy patriconfi_agents"
